--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,6 +35,8 @@
                     android:id="@+id/editTextUsername"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
+                    android:drawableTint="@color/pink"
                     android:maxLines="1"
                     android:inputType="text"
                     android:hint="@string/username" />
@@ -50,6 +52,8 @@
                     android:id="@+id/editTextPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+                    android:drawableTint="@color/pink"
                     android:maxLines="1"
                     android:inputType="textPassword"
                     android:hint="@string/password" />
@@ -65,6 +69,8 @@
                     android:id="@+id/editTextConfirmPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
+                    android:drawableTint="@color/pink"
                     android:maxLines="1"
                     android:inputType="textPassword"
                     android:hint="@string/confirm_password" />
