--- a/app/src/main/res/layout/fragment_charity_organization.xml
+++ b/app/src/main/res/layout/fragment_charity_organization.xml
@@ -5,147 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.organization.CharityOrganizationFragment">
-    <androidx.core.widget.NestedScrollView
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="0pt">
+            android:orientation="vertical" >
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cat1Card"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewOrganizationList"
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:paddingLeft="120dp"
-                android:paddingTop="30dp"
-                app:cardBackgroundColor="#E4DD9F9F"
-                app:cardCornerRadius="2dp">
-
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="126dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/book" />
-
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="269dp"
-                    android:layout_height="36dp"
-                    android:paddingLeft="120dp"
-                    android:paddingTop="15dp"
-                    android:text="The Salvation Army"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="134dp"
-                    android:paddingTop="40dp"
-                    android:text="356 Tanglin Rd \nOpening hour: 10AM - 6PM \nH:6718 2506" />
-
-                <com.google.android.gms.maps.MapView
-                    android:id="@+id/mapView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/spacerCard2"
-                android:layout_width="match_parent"
-                android:layout_height="20dp">
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cat1Card4"
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:paddingLeft="120dp"
-                android:paddingTop="30dp"
-                app:cardBackgroundColor="#E4DD9F9F">
-
-                <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="126dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/furniture" />
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="269dp"
-                    android:layout_height="36dp"
-                    android:paddingLeft="120dp"
-                    android:paddingTop="15dp"
-                    android:text="The Salvation Army"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="134dp"
-                    android:paddingTop="40dp"
-                    android:text="20 Bishan Street 22 \nOpening hour: 10AM - 6PM \nH:6555 0188" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/spacerCard1"
-                android:layout_width="match_parent"
-                android:layout_height="20dp">
-
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cat1Card3"
-                android:layout_width="match_parent"
-                android:layout_height="140dp"
-                android:paddingLeft="120dp"
-                android:paddingTop="30dp"
-                app:cardBackgroundColor="#E4DD9F9F">
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="269dp"
-                    android:layout_height="36dp"
-                    android:paddingLeft="120dp"
-                    android:paddingTop="15dp"
-                    android:text="The Salvation Army"
-                    android:textAlignment="center" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="134dp"
-                    android:paddingTop="40dp"
-                    android:text="356 Tanglin Rd \nOpening hour: 10AM - 6PM \nH:6718 2506" />
-
-                <ImageView
-                    android:id="@+id/imageView7"
-                    android:layout_width="123dp"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/book" />
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/spacerCard4"
-                android:layout_width="match_parent"
-                android:layout_height="20dp">
-
-            </androidx.cardview.widget.CardView>
-
+                android:layout_height="wrap_content" />
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-
-
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
