--- a/app/src/main/res/menu/edit_appbar_menu.xml
+++ b/app/src/main/res/menu/edit_appbar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_chat"
+        android:id="@+id/action_save"
         android:icon="@drawable/ic_check_black_24dp"
         app:showAsAction="always"
         android:title="@string/title_save"/>
